kubernetes/base/vault-ha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
  - port: 8200
    targetPort: 8200
    protocol: TCP
    name: api
  - port: 8201
    targetPort: 8201
    protocol: TCP
    name: cluster
  selector:
    app: vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault-headless
  labels:
    app: vault
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - port: 8200
    targetPort: 8200
    protocol: TCP
    name: api
  - port: 8201
    targetPort: 8201
    protocol: TCP
    name: cluster
  selector:
    app: vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault-active
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
  - port: 8200
    targetPort: 8200
    protocol: TCP
    name: api
  - port: 8201
    targetPort: 8201
    protocol: TCP
    name: cluster
  selector:
    app: vault
    vault-active: "true"
